hero extra space fixed

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,6 @@
 main {
 
-  height: 122dvh;
+  height: 100dvh;
   /*114 is the header height + margin*/
   display: flex;
   flex-direction: column;
